add bark history
