# ent/schema/group.go
@@ -6,7 +6,6 @@ import (
 	"entgo.io/ent/schema/edge"
 	"entgo.io/ent/schema/field"
 	uuid "github.com/satori/go.uuid"
-	"notification/internal/pb"
 )
 
 // Group holds the schema definition for the Group entity.
@@ -21,7 +20,7 @@ func (Group) Fields() []ent.Field {
 		field.String("name"),
 		field.Time("created_at"),
 		field.String("share_url").Optional(),
-		field.JSON("option", pb.GroupOption{}).Optional(),
+		field.Text("option").Optional(),
 		field.Int32("seq"),
 	}
 }
